10-devops-deployment/02-kubernetes/demo-basic-deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: product
  labels:
    name: product
    environment: development
