10-devops-deployment/02-kubernetes/demo-basic-deployment/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: product
  labels:
    app: product-service
spec:
  type: LoadBalancer  # Use NodePort for Minikube, LoadBalancer for cloud
  selector:
    app: product-service
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
    # nodePort: 30080  # Optional: Specify NodePort (30000-32767)
  sessionAffinity: None
